styles(mart): adjust upload button

--- a/src/duy-anh-mart/duy-anh-mart.html
+++ b/src/duy-anh-mart/duy-anh-mart.html
@@ -190,7 +190,7 @@
     </div>
   </div>
 
-  <label class="item" for="uploadDatabase">Upload</label>
+  <label class="item" for="uploadDatabase" style="color: #aaa;">Upload</label>
   <input
     type="file"
     id="uploadDatabase"
