--- a/src/duy-anh-mart/duy-anh-mart.html
+++ b/src/duy-anh-mart/duy-anh-mart.html
@@ -12,7 +12,7 @@
         type="text"
         autofocus
         value.bind="productCode"
-        placeholder="Chup code gia"
+        placeholder="Chup code mat hang"
       />
       <div class="productContainer">
         <div class="productPriceContainer">
@@ -125,6 +125,25 @@
 
     <!-- Calculate Session -->
     <div class="rightContainer">
+      <div class="instructionBoxContainer">
+        <div>
+          Thong Tin
+          <div class="instructionBox">
+            <!-- No Product code -->
+            <div if.bind="!productCode && currentProduct.price === undefined">
+              📢 &nbsp; Dang cho chup code (an ESC de chup)
+            </div>
+            <!-- Product code, but no prce -->
+            <div if.bind="productCode && currentProduct.price === undefined">
+              🗳️ &nbsp; Chua tim thay gia
+            </div>
+            <div if.bind="currentProduct.price !== undefined">
+              🎎 &nbsp; Dang thanh toan cho khac
+            </div>
+          </div>
+        </div>
+      </div>
+
       <h3>Hoa Don</h3>
       <div class="sessionContainer">
         <div class="currentSessionContainer">
@@ -148,7 +167,6 @@
             <!-- name -->
             <div class="sessionProduct__code--name">${sessionProduct.name}</div>
 
-
             <!-- amount -->
             <div class="sessionProduct__code--amount">
               <input
@@ -170,7 +188,8 @@
               ${(sessionProduct.price).toLocaleString("en")}
             </div>
             <div class="sessionProduct__code--priceTotal">
-              ${(sessionProduct.price * sessionProduct.count).toLocaleString("en")}
+              ${(sessionProduct.price *
+              sessionProduct.count).toLocaleString("en")}
             </div>
 
             <!-- timestamp -->
@@ -190,7 +209,7 @@
     </div>
   </div>
 
-  <label class="item" for="uploadDatabase" style="color: #aaa;">Upload</label>
+  <label class="item" for="uploadDatabase" style="color: #aaa">Upload</label>
   <input
     type="file"
     id="uploadDatabase"
