--- a/src/duy-anh-mart/duy-anh-mart.html
+++ b/src/duy-anh-mart/duy-anh-mart.html
@@ -5,14 +5,14 @@
     <!-- Enter price and manage -->
 
     <div class="leftContainer">
-      <h3>🔎 Tim Gia</h3>
+      <h3>🔎 Tìm giá</h3>
       <input
         ref="productCodeInputRef"
         class="scannerInput"
         type="text"
         autofocus
         value.bind="productCode"
-        placeholder="Chup code mat hang"
+        placeholder="Chụp code mặt hàng"
       />
       <div class="productContainer">
         <div class="productPriceContainer">
@@ -25,7 +25,7 @@
           </template>
           <!-- No price -->
           <span class="productPrice__notFound" if.bind="priceNotFound"
-            >⚠️ Ko tim thay gia</span
+            >⚠️ Ko tìm thấy giá</span
           >
         </div>
         <span class="productName">${currentProduct.name}</span>
@@ -45,10 +45,10 @@
 
       <!-- Them mat hang -->
       <div class="manageProductsContainer ${priceNotFound ? '' : 'disabled'}">
-        <h5>➕ Them mat hang</h5>
+        <h5>➕ Thêm mặt hàng</h5>
         <div class="addNewProductContainer">
           <div>
-            <label for="">Ten</label>
+            <label for="">Tên</label>
             <input
               ref="newProductNameInputRef"
               class="newProductName"
@@ -59,7 +59,7 @@
           </div>
 
           <div>
-            <label for="">Gia moi</label>
+            <label for="">Giá mới</label>
             <input
               ref="newProductPriceInputRef"
               type="number"
@@ -78,7 +78,7 @@
           </button>
         </div>
         <div if.bind="newlyAddedProduct" class="newlyAddedContainer">
-          ✅ da them "${newlyAddedProduct.name}" thanh cong voi gia
+          ✅ đã thêm "${newlyAddedProduct.name}" thành công với giá
           "${newlyAddedProduct.price}" VND
         </div>
       </div>
@@ -87,7 +87,7 @@
 
       <!-- Sua gia -->
       <div class="existingProductContainer ${canEditPrice ? '' : 'disabled'}">
-        <h5>✏️ Sua gia</h5>
+        <h5>✏️ Sửa giá</h5>
         <div>
           <label for="">VND</label>
           <input
@@ -98,7 +98,7 @@
           />
         </div>
         <div>
-          <label for="">Ten</label>
+          <label for="">Tên</label>
           <input
             ref="updateProductNameRef"
             disabled.bind="!canEditPrice"
@@ -107,14 +107,14 @@
           />
         </div>
         <button disabled.bind="!canEditPrice" click.delegate="updateProduct()">
-          Sua gia mat hang
+          Sửa giá mặt hàng
         </button>
         <button
           class="deleteProductButton"
           disabled.bind="!canEditPrice"
           click.delegate="deleteProduct()"
         >
-          🗑️ Bo hang nay di
+          🗑️ Bỏ hàng này đi
         </button>
       </div>
 
@@ -127,35 +127,35 @@
     <div class="rightContainer">
       <div class="instructionBoxContainer">
         <div>
-          Thong Tin
+          Thông tin
           <div class="instructionBox">
             <!-- No Product code -->
             <div if.bind="!productCode && currentProduct.price === undefined">
-              📢 &nbsp; Dang cho chup code (an ESC de chup)
+              📢 &nbsp; Đang chờ chụp code (ấn ESC để chụp)
             </div>
             <!-- Product code, but no prce -->
             <div if.bind="productCode && currentProduct.price === undefined">
-              🗳️ &nbsp; Chua tim thay gia
+              🗳️ &nbsp; Chưa tìm thấy giá
             </div>
             <div if.bind="currentProduct.price !== undefined">
-              🎎 &nbsp; Dang thanh toan cho khac
+              🎎 &nbsp; Đang thanh toán cho khách
             </div>
           </div>
         </div>
       </div>
 
-      <h3>Hoa Don</h3>
+      <h3>Hóa Đơn</h3>
       <div class="sessionContainer">
         <div class="currentSessionContainer">
           <!-- table header -->
           <div class="sessionProduct__tableHeader">
             <div class="sessionProduct__header--numbering">TT</div>
-            <div class="sessionProduct__header--name">Ten</div>
-            <div class="sessionProduct__header--amount">S.luong</div>
+            <div class="sessionProduct__header--name">Tên</div>
+            <div class="sessionProduct__header--amount">S.lượng</div>
             <!-- <div class="sessionProduct__header">Gio</div> -->
             <!-- <div class="sessionProduct__header--code">Code</div> -->
-            <div class="sessionProduct__header--price">D.gia</div>
-            <div class="sessionProduct__header--price">T.Tien</div>
+            <div class="sessionProduct__header--price">D.giá</div>
+            <div class="sessionProduct__header--price">T.tiền</div>
           </div>
 
           <!-- table body -->
