feat(mart): message for update

--- a/src/duy-anh-mart/duy-anh-mart.html
+++ b/src/duy-anh-mart/duy-anh-mart.html
@@ -116,6 +116,11 @@
         >
           🗑️ Bỏ hàng này đi
         </button>
+
+        <div if.bind="showUpdatedMessage">
+          ✅ đã sửa "${updatedProductName}" thành công với giá
+          "${updatedProductPrice.toLocaleString("en")}" VND
+        </div>
       </div>
 
       <!-- <hr />
