feat(mart): add emoji for add/edit and increase to h4

--- a/src/duy-anh-mart/duy-anh-mart.html
+++ b/src/duy-anh-mart/duy-anh-mart.html
@@ -66,7 +66,7 @@
           show.bind="priceNotFound"
           class="manageProductsContainer ${priceNotFound ? '' : 'disabled'}"
         >
-          <h5>➕ Thêm mặt hàng</h5>
+          <h4>➕➕ &nbsp; Thêm mặt hàng &nbsp; ➕ ➕ </h4>
           <div class="addNewProductContainer">
             <div>
               <label for="">Tên</label>
@@ -108,7 +108,7 @@
           show.bind="canEditPrice"
           class="existingProductContainer ${canEditPrice ? '' : 'disabled'}"
         >
-          <h5>✏️ Sửa giá</h5>
+          <h4>✏️️✏️ &nbsp; Sửa giá &nbsp; ✏️✏️</h4>
           <div>
             <label for="">VND</label>
             <input
